# simplegmail

./: Makefile  docker-compose.yml  pyproject.toml  ruff.toml
gmsa/: attachment.py  authentication.py  exceptions.py  gmail.py  message.py
simplegmail/: gmail.py  label.py  message.py
