[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmsa"
description = "Google Mail Simple API"
dynamic = ["version", "readme"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>4",
    "google-api-python-client>2,<3",
    "google-auth-oauthlib>=0.5,<1.0",
    "lxml>=4.4.2",
]

[project.scripts]
gmsa = "gmsa.cli:cli"

##### Hatch

[tool.hatch.version]
path = "gmsa/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
dependencies = ["ipdb"]

[tool.hatch.envs.test]
dependencies = [
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
	"types-click",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy gmsa"

[tool.hatch.envs.lint]
detached = true  # do not install package
dependencies = [
	"pylint",
]

[tool.hatch.envs.lint.scripts]
lint = "pylint gmsa"
